--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -11,4 +11,4 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: build
-      run: dotnet build .
+      run: dotnet build ./SimpleWebHalloWorld.sln
