--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -28,3 +28,12 @@ jobs:
          registry: ghcr.io
          username: ${{github.actor}};
          password: ${{secrets.GITHUB_TOKEN}}
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2.7.0
+        with:
+         push: true
+         context: .
+         tags: |
+          ghcr.io/svetlanaern/simplewebhalloworld:latest
+          ghcr.io/svetlanaern/simplewebhalloworld:${{github.run_number}}   
